--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.5.2",
     "react-icons": "^4.2.0",
+    "react-query": "^3.16.1",
     "webpack": "^5.36.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.6",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
     "typescript": "^4.2.4"
   }
 }
